styling the header and body

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <header>
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <h1>
         <a href="/">RUN BUDDY</a>
     </h1>
@@ -24,10 +25,6 @@
 </header>
 
 <body>
-    <!-- navigation -->
-    <header>
-        <h1>RUN BUDDY</h1>
-    </header>
 
     <!-- hero/jumbotron -->
     <section>
